# deepseek-code

./: README.md  pyproject.toml
.github/workflows/: ci.yml
deepseek_code/: agent.py  cli.py  context.py  conversation.py  llm.py  permissions.py  ui.py
deepseek_code/tools/: __init__.py  base.py  bash_tool.py  file_tools.py  search_tools.py
deepseek_code_server/: __init__.py  agent.py  llm.py  permissions.py  server.py  ui.py
deepseek_code_server/tools/: base.py  bash_tool.py  search_tools.py
docs/: ROADMAP_V0_2.md
tests/: test_permissions.py  test_tools.py
