[project]
name = "deepseek-code-server"
version = "0.1.0"
description = "AI coding assistant REST API server - Deploy DeepSeek Code as a service"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "yksanjo", email = "yksanjo@example.com" }
]
keywords = ["ai", "coding", "assistant", "deepseek", "server", "api", "fastapi"]
homepage = "https://github.com/yksanjo/deepseek-code-server"
repository = "https://github.com/yksanjo/deepseek-code-server"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
deepseek-code-server = "deepseek_code_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepseek_code_server"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
